@@ -22,11 +22,14 @@ package org.flywaydb.verb.migrate.migrators;
 import static org.flywaydb.verb.VerbUtils.toMigrationText;
 
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 import lombok.CustomLog;
+import org.flywaydb.core.ProgressLogger;
 import org.flywaydb.core.api.LoadableMigrationInfo;
 import org.flywaydb.core.api.MigrationInfo;
 import org.flywaydb.core.api.MigrationState;
+import org.flywaydb.core.api.callback.Event;
 import org.flywaydb.core.api.configuration.Configuration;
 import org.flywaydb.core.api.output.CommandResultFactory;
 import org.flywaydb.core.api.output.MigrateResult;
@@ -34,19 +37,63 @@ import org.flywaydb.core.api.resource.LoadableResource;
 import org.flywaydb.core.experimental.ExperimentalDatabase;
 import org.flywaydb.core.internal.exception.FlywayMigrateException;
 import org.flywaydb.core.internal.parser.ParsingContext;
+import org.flywaydb.core.internal.util.Pair;
 import org.flywaydb.core.internal.util.StopWatch;
 import org.flywaydb.core.internal.util.StringUtils;
+import org.flywaydb.nc.callbacks.CallbackManager;
 import org.flywaydb.verb.ErrorUtils;
-import org.flywaydb.verb.FileReadingWithPlaceholderReplacement;
+import org.flywaydb.verb.executors.ExecutorFactory;
 import org.flywaydb.verb.migrate.MigrationExecutionGroup;
+import org.flywaydb.verb.executors.Executor;
+import org.flywaydb.verb.readers.Reader;
+import org.flywaydb.verb.readers.ReaderFactory;
 
 @CustomLog
-public class ApiMigrator extends Migrator{
-    
+public class ApiMigrator extends Migrator {
+
     @Override
     public List<MigrationExecutionGroup> createGroups(final MigrationInfo[] allPendingMigrations,
-        final Configuration configuration, final ExperimentalDatabase experimentalDatabase, final MigrateResult migrateResult, final ParsingContext parsingContext) {
-        return List.of(new MigrationExecutionGroup(List.of(allPendingMigrations), true));        
+        final Configuration configuration,
+        final ExperimentalDatabase experimentalDatabase,
+        final MigrateResult migrateResult,
+        final ParsingContext parsingContext) {
+        final List<MigrationInfo> currentGroup = Arrays.asList(allPendingMigrations);
+        final List<Pair<MigrationInfo, Boolean>> migrationTransactionPairs = currentGroup.stream()
+            .map(x -> Pair.of(x, shouldExecuteInTransaction(x, configuration)))
+            .toList();
+        if (!configuration.isGroup()) {
+            return migrationTransactionPairs.stream()
+                .map(x -> new MigrationExecutionGroup(List.of(x.getLeft()), x.getRight()))
+                .toList();
+        }
+
+        for (final Pair<MigrationInfo, Boolean> pair : migrationTransactionPairs) {
+            final MigrationInfo migrationInfo = pair.getLeft();
+            final boolean shouldExecuteMigrationInTransaction = pair.getRight();
+            if (configuration.isExecuteInTransaction() != shouldExecuteMigrationInTransaction) {
+                if (configuration.isMixed()) {
+                    return migrationTransactionPairs.stream()
+                        .map(x -> new MigrationExecutionGroup(List.of(x.getLeft()), x.getRight()))
+                        .toList();
+                } else {
+                    throw new FlywayMigrateException(migrationInfo,
+                        "Detected both transactional and non-transactional migrations within the same migration group"
+                            + " (even though mixed is false). First offending migration: "
+                            + experimentalDatabase.doQuote((migrationInfo.isVersioned() ? migrationInfo.getVersion()
+                            .getVersion() : "") + (StringUtils.hasLength(migrationInfo.getDescription()) ? " "
+                            + migrationInfo.getDescription() : ""))
+                            + (shouldExecuteMigrationInTransaction ? "" : " [non-transactional]"),
+                        shouldExecuteMigrationInTransaction,
+                        migrateResult);
+                }
+            }
+        }
+        if (!configuration.isExecuteInTransaction()) {
+            return Arrays.stream(allPendingMigrations)
+                .map(x -> new MigrationExecutionGroup(List.of(x), false))
+                .toList();
+        }
+        return List.of(new MigrationExecutionGroup(currentGroup, true));
     }
 
     @Override
@@ -55,15 +102,24 @@ public class ApiMigrator extends Migrator{
         final ExperimentalDatabase experimentalDatabase,
         final MigrateResult migrateResult,
         final ParsingContext parsingContext,
-        final int installedRank) {
+        final int installedRank,
+        final CallbackManager callbackManager,
+        final ProgressLogger progress) {
         int rank = installedRank;
-        final boolean executeInTransaction = configuration.isExecuteInTransaction()
-            && executionGroup.shouldExecuteInTransaction();
+        final boolean executeInTransaction = executionGroup.shouldExecuteInTransaction();
         if (executeInTransaction) {
             experimentalDatabase.startTransaction();
         }
         for (final MigrationInfo migrationInfo : executionGroup.migrations()) {
-            doIndividualMigration(migrationInfo, experimentalDatabase, configuration, migrateResult, rank, parsingContext);
+            doIndividualMigration(migrationInfo,
+                experimentalDatabase,
+                configuration,
+                migrateResult,
+                rank,
+                parsingContext,
+                callbackManager,
+                executeInTransaction,
+                progress);
             rank++;
         }
         if (executeInTransaction) {
@@ -72,42 +128,82 @@ public class ApiMigrator extends Migrator{
         return rank;
     }
 
-    private void doIndividualMigration(final MigrationInfo migrationInfo, final ExperimentalDatabase experimentalDatabase,
-        final Configuration configuration, final MigrateResult migrateResult, final int installedRank, final ParsingContext parsingContext) {
+    private void doIndividualMigration(final MigrationInfo migrationInfo,
+        final ExperimentalDatabase experimentalDatabase,
+        final Configuration configuration,
+        final MigrateResult migrateResult,
+        final int installedRank,
+        final ParsingContext parsingContext,
+        final CallbackManager callbackManager,
+        final boolean executeInTransaction,
+        final ProgressLogger progress) {
         final StopWatch watch = new StopWatch();
         watch.start();
 
-        final boolean outOfOrder = migrationInfo.getState() == MigrationState.OUT_OF_ORDER && configuration.isOutOfOrder();
-        final String migrationText = toMigrationText(migrationInfo, false, experimentalDatabase, outOfOrder);
+        final boolean outOfOrder = migrationInfo.getState() == MigrationState.OUT_OF_ORDER
+            && configuration.isOutOfOrder();
+        final String migrationText = toMigrationText(migrationInfo,
+            executeInTransaction,
+            experimentalDatabase,
+            outOfOrder);
+        final Executor<String> executor = ExecutorFactory.getExecutor(experimentalDatabase, configuration);
+        final Reader<String> reader = ReaderFactory.getReader(experimentalDatabase, configuration);
 
         try {
             if (configuration.isSkipExecutingMigrations()) {
                 LOG.debug("Skipping execution of migration of " + migrationText);
+                progress.log("Skipping migration of " + migrationInfo.getScript());
             } else {
                 LOG.debug("Starting migration of " + migrationText + " ...");
+                progress.log("Starting migration of " + migrationInfo.getScript() + " ...");
+                if (!migrationInfo.getType().isUndo()) {
+                    callbackManager.handleEvent(Event.BEFORE_EACH_MIGRATE,
+                        experimentalDatabase,
+                        configuration,
+                        parsingContext);
+                }
                 if (!migrationInfo.getType().isUndo()) {
                     LOG.info("Migrating " + migrationText);
+                    progress.log("Migrating " + migrationInfo.getScript());
                 } else {
                     LOG.info("Undoing migration of " + migrationText);
                 }
 
-                final String executionUnit = FileReadingWithPlaceholderReplacement.readFile(configuration, parsingContext, migrationInfo.getPhysicalLocation());
-                experimentalDatabase.doExecute(executionUnit, configuration.isOutputQueryResults());
+                if (migrationInfo instanceof final LoadableMigrationInfo loadableMigrationInfo) {
+                    final String executionUnit = reader.read(configuration,
+                        experimentalDatabase,
+                        parsingContext,
+                        loadableMigrationInfo.getLoadableResource(),
+                        null).findFirst().get();
+                    executor.execute(experimentalDatabase, executionUnit, configuration);
+                    executor.finishExecution(experimentalDatabase, configuration);
+                }
+
+                if (!migrationInfo.getType().isUndo()) {
+                    callbackManager.handleEvent(Event.AFTER_EACH_MIGRATE,
+                        experimentalDatabase,
+                        configuration,
+                        parsingContext);
+                }
             }
         } catch (final Exception e) {
             watch.stop();
             final int totalTimeMillis = (int) watch.getTotalTimeMillis();
-            handleMigrationError(e, experimentalDatabase, migrationInfo,
+            handleMigrationError(e,
+                experimentalDatabase,
+                migrationInfo,
                 migrateResult,
                 configuration.getTable(),
                 configuration.isOutOfOrder(),
                 installedRank,
                 experimentalDatabase.getInstalledBy(configuration),
+                executeInTransaction,
                 totalTimeMillis);
         }
 
         watch.stop();
 
+        progress.log("Successfully completed migration of " + migrationInfo.getScript());
         migrateResult.migrationsExecuted += 1;
         final int totalTimeMillis = (int) watch.getTotalTimeMillis();
         migrateResult.putSuccessfulMigration(migrationInfo, totalTimeMillis);
@@ -132,8 +228,12 @@ public class ApiMigrator extends Migrator{
         final boolean outOfOrder,
         final int installedRank,
         final String installedBy,
+        final boolean executeInTransaction,
         final int totalTimeMillis) {
-        final String migrationText = toMigrationText(migrationInfo, false, experimentalDatabase, outOfOrder);
+        final String migrationText = toMigrationText(migrationInfo,
+            executeInTransaction,
+            experimentalDatabase,
+            outOfOrder);
         final String failedMsg;
         if (!migrationInfo.getType().isUndo()) {
             failedMsg = "Migration of " + migrationText + " failed!";
@@ -144,18 +244,24 @@ public class ApiMigrator extends Migrator{
         migrateResult.putFailedMigration(migrationInfo, totalTimeMillis);
         migrateResult.setSuccess(false);
 
-        LOG.error(failedMsg + " Please restore backups and roll back database and code!");
-        updateSchemaHistoryTable(schemaHistoryTableName,
-            migrationInfo,
-            totalTimeMillis,
-            installedRank,
-            experimentalDatabase,
-            installedBy,
-            false);
+        if (executeInTransaction) {
+            experimentalDatabase.rollbackTransaction();
+            LOG.error(failedMsg + " Changes successfully rolled back.");
+        } else {
+            LOG.error(failedMsg + " Please restore backups and roll back database and code!");
+            updateSchemaHistoryTable(schemaHistoryTableName,
+                migrationInfo,
+                totalTimeMillis,
+                installedRank,
+                experimentalDatabase,
+                installedBy,
+                false);
+        }
 
         throw new FlywayMigrateException(migrationInfo,
             calculateErrorMessage(e, migrationInfo),
-            true, migrateResult);
+            executeInTransaction,
+            migrateResult);
     }
 
     private String calculateErrorMessage(final Exception e, final MigrationInfo migrationInfo) {
@@ -167,10 +273,22 @@ public class ApiMigrator extends Migrator{
             loadableResource = loadableMigrationInfo.getLoadableResource();
         }
 
-        return ErrorUtils.calculateErrorMessage(e, title,
+        return ErrorUtils.calculateErrorMessage(e,
+            title,
             loadableResource,
             migrationInfo.getPhysicalLocation(),
             null,
+            null,
             "Message    : " + e.getMessage() + "\n");
+    }
+
+    private boolean shouldExecuteInTransaction(final MigrationInfo migrationInfo, final Configuration configuration) {
+        if (migrationInfo instanceof final LoadableMigrationInfo loadableMigrationInfo) {
+            if (loadableMigrationInfo.getSqlScriptMetadata() != null
+                && loadableMigrationInfo.getSqlScriptMetadata().executeInTransaction() != null) {
+                return loadableMigrationInfo.getSqlScriptMetadata().executeInTransaction();
+            }
+        }
+        return configuration.isExecuteInTransaction();
     }
 }
